force-app/main/default/objects/Log_Event__e/Log_Event__e.object-meta.xml
<CustomObject>
    <description>Represents a call to the logging framework. 
For each trigger instance, a &quot;Log Transaction&quot; record will be created. 
For each event instance, a &quot;Log&quot; record will be created.</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>