force-app/main/default/objects/Log_Event__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Indicates the severity of the log message. Values are derived from Apex&apos;s standard LoggingLevel enum:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_enum_System_LoggingLevel.htm</description>
    <label>Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>