force-app/main/default/objects/Log_Event__e/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <description>The Salesforce ID of the User which generated the log. This is always UserInfo.getUserId(). Maps to the &quot;Owner&quot; field on the &quot;Log Transaction&quot; object.</description>
    <label>Running User</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>