force-app/main/default/objects/Log_Event__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>The severity of the current log. Maps to the field of the same name on the &quot;Log&quot; object.</description>
    <label>Severity</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>