force-app/main/default/objects/Log_Event__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Optional field stores the general origin or the log file. Maps to the field of the same name on the &quot;Log&quot; object.
Possible values include:
- Apex
- Flow
- LWC
- Visualforce</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>