force-app/main/default/objects/Log_Event__e/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>In apex, displays the detailed origin of the log request. Maps to the field of the same name on the &quot;Log&quot; object.</description>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>