force-app/main/default/objects/Log_Event__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>The Id of the execution window in which the event was published</description>
    <label>Transaction Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>